fixes video page language tabs being misaligned. Also fixed the nothing message being stretched out of bounds. https://www.pivotaltracker.com/story/show/14287605

--- a/media/css/classes.css
+++ b/media/css/classes.css
@@ -256,7 +256,6 @@ font-size: 16px;
 
 .nothing{
   background: white;
-  width: 940px;
   padding: 20px;
   clear: both;
   border: 1px solid #aaa;
